update error and main page

--- a/error.html
+++ b/error.html
@@ -72,10 +72,9 @@
       </header>
       <!-- end header -->
       <div class="main">
-        <div class="cover" style="background-image: url(img/cover.jpg)">
-          <div class="cover__content">
-            <p>Посуточная аренда лучших аппартаментов в Москва-Сити по версии International Property Awards </p>
-          </div>
+        <div class="error">
+          <img src="img/error.png" alt="404" class="error__img">
+          <div class="error__description">Посуточная аренда лучших аппартаментов в Москва-Сити по версии International Property Awards </div>
         </div>
       </div>
     </div>
