--- a/gulp/tasks/index/index.html
+++ b/gulp/tasks/index/index.html
@@ -220,7 +220,7 @@
       color: #050a0f;
       display: inline-block;
       vertical-align: top;
-      margin-left: 80px;
+      margin-left: 40px;
     }
     .header__updated em{
       font-weight: normal;
@@ -406,9 +406,6 @@
     <path d="M20 0H2C.9 0 0 .9 0 2v12c0 1.1.9 2 2 2h7l-2 3v1h8v-1l-2-3h7c1.1 0 2-.9 2-2V2c0-1.1-.9-2-2-2zm0 12H2V2h18v10z" fill-rule="evenodd"/>
 </symbol></svg>
   <header class="header">
-    <h1><a href="http://riverco.de">
-      <svg class="icon icon-logo"><use xlink:href="#icon-logo"></use></svg>
-    </a></h1>
     <%
 		date = new Date(_.now());
 		if(date.getMonth()+1<10){ month = '0' + (date.getMonth()+1);} 
@@ -465,7 +462,7 @@
     
     <iframe id="preview"  width="1600" height="600" src="<%= pages.PageList[0].file %>"  frameborder="0"></iframe>
     <footer>
-      <p>Coded with ❤️ at <a href="http://riverco.de">Coderiver</a></p>
+      <p>Coded with ❤️</p>
     </footer>
   </aside>
 
